Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-13299

Custom TextEditor settings aren't applied on session restore.

XMLWordPrintable

      Steps to reproduce:

      • create a session
      • create a qmake project
      • edit the project specific editor settings
      • open the .pro file
      • check that the custom settings are working
      • do not close the project file
      • close creator
      • open creator with the session which was created in step 1
      • the project file should be opened again
      • the custom settings aren't applied to the pro file editor

      Hints:
      SessionManager::configureEditor is called before the project was completely parsed.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dt Daniel Teske
            davschul David Schulz
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes